updated  for parallel processing

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,5 +20,18 @@ pipeline{
                 sh 'npm pack'
             }
         }
+        
+        stage('run-parallel-branches') {
+  steps {
+    parallel(
+      a: {
+        echo "This is branch a"
+      },
+      b: {
+        echo "This is branch b"
+      }
+    )
+  }
+}
     }
 }
